
	* Make seccomp sandbox allow kill and tgkill outright, since groff
	  uses kill to pass on signals to its child processes.

	* Make seccomp sandbox allow sibling architectures on
	  x86/x86_64/x32, since people sometimes mix and match architectures
	  there for performance reasons.

	* Fix version check in locale macro loading to tolerate groff
	  release candidates.

man-db 2.8.2 (28 February 2018)
===============================

Major changes since man-db 2.8.1:

	Fixes:
	------

	* Make seccomp sandbox allow kill and tgkill when the signal is
	  directed at the current process or one of its threads; this is
	  needed by xz.

	* Make seccomp sandbox allow ioctl(fd, TIOCGWINSZ), since that's used
	  by musl.

	* Work around the proprietary "ESET File Security" antivirus program in
	  seccomp sandbox: if this is in use then we need to allow some
	  socket-related system calls.

	* Work around the "snoopy" execve() wrapper and logger in seccomp
	  sandbox: if this is in use then we need to allow some
	  socket-related system calls.

	* Interpret EFAULT from seccomp_load as meaning that seccomp is
	  unavailable, since this can be returned by some versions of
	  qemu-user.

man-db 2.8.1 (9 February 2018)
==============================

Major changes since man-db 2.8.0:

	Fixes:
	------

	* Fix seccomp sandbox build on Linux/POWER.

	* Fix manconv execution under seccomp when man is installed setuid.

	* Make seccomp sandbox allow mremap (used by iconv, for example).

	Improvements:
	-------------

	* configure now has a --without-libseccomp option to disable the use
	  of seccomp even if the library is available.

man-db 2.8.0 (4 February 2018)
==============================

Major changes since man-db 2.7.6.1:

	Fixes:
	------

	* Fix locale macro loading for Chinese to load the macro file
	  corresponding to just the language part of the user's locale.

	* Honour --enable-cache-owner in generated systemd tmpfiles snippet
	  rather than hardcoding "man".
